[gd_scene load_steps=3 format=3 uid="uid://b7qxv8jy4hq6h"]

[ext_resource type="Script" path="res://scripts/BaseCharacter.gd" id="1_base"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_physics"]
size = Vector2(40, 80)

[node name="BaseCharacter" type="CharacterBody2D"]
collision_layer = 1
collision_mask = 1
script = ExtResource("1_base")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.7, 1, 1)
position = Vector2(0, -40)
scale = Vector2(40, 80)
texture = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_physics")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
monitorable = true

[node name="HurtBox" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(0, -40)
shape = SubResource("RectangleShape2D_physics")
debug_color = Color(0.8, 0.2, 0.2, 0.42)

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = true
monitorable = false

[node name="DamageBox" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(30, -40)
disabled = true
debug_color = Color(0.9, 0.7, 0.1, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
